# distrib-kv-store

./: .gitignore  Cargo.toml  Config.toml  DEMO_INSTRUCTIONS.md  README.md  TODOS.md  build.rs  test-cluster.sh
benches/: carp_benchmark.rs  concurrent_benchmark.rs  operations_benchmark.rs
client/: Cargo.toml
distrib-kv-store/: Cargo.toml
distrib-kv-store/src/: app.rs  carp.rs  store.rs
distrib-kv-store/src/network/: error.rs
proto/: raft_grpc.proto
scripts/: demo-repl.sh  launch-multiple-clusters.sh  test-multiple-clusters.sh  test-single-cluster.sh
scripts/.ipynb_checkpoints/: launch-multiple-clusters-checkpoint.sh
src/: carp.rs  client.rs  cluster_manager.rs  kvclient.rs  lib.rs  network.rs  node.rs  raft_node.rs  store.rs
src/network/: api.rs  error.rs  management.rs  raft.rs  raft_network_impl.rs
tests/: client.rs  test_cluster.rs  test_operations_per_second.rs  test_raft_cluster.rs
