[package]
name = "distrib-kv-store"
version = "0.1.0"
edition = "2021"
description = "A distributed key-value store."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "raft-kv"
path = "src/bin/main.rs"

[dependencies]
openraft = { version = "0.9.7", features = ["serde", "storage-v2"] }
tokio = { version = "1.37.0", features = ["full"] }
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
reqwest = { version = "0.12.4", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tide = "0.16.0"
# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-alpha.1/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.10.0", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.10.1" }
